Add tests, service classes